Fixing alignment issue with the menu button on mobile

--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -24,7 +24,7 @@
   }
   .animated-icon {
     width: 30px;
-    height: 20px;
+    height: 23px;
     position: relative;
     margin: 0px;
     -webkit-transform: rotate(0deg);
